tests/baselines/reference/pathsValidation3.errors.txt
tests/cases/compiler/tsconfig.json(5,20): error TS5066: Substitutions for pattern 'foo' shouldn't be an empty array.


==== tests/cases/compiler/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "foo": []
                       ~~
!!! error TS5066: Substitutions for pattern 'foo' shouldn't be an empty array.
            }
        }
    }
    
==== tests/cases/compiler/a.ts (0 errors) ====
    let x = 1;